update unit tests

--- a/payments/templates/search.html
+++ b/payments/templates/search.html
@@ -28,7 +28,7 @@
 {% if search_result %}
     <div class="table_div">
     <table>
-        <thead><a href="{{ url_for('open_payment.download_excel') }}?field={{ search_field
+        <thead><a href="{{ url_for('download.download_excel') }}?field={{ search_field
                 }}&keyword={{
                 search_keyword
                 }}">DOWNLOAD</a></thead>
